--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,8 +20,8 @@
             {# IF MOBILE #}
             {% block mobile_header %}
             <header class="h-[110px] w-screen absolute flex justify-between px-6 py-3">
-                <a href="{{ path('home') }}" class=""><img src={{ asset('build/images/svg/'~ "logo-white.svg")}} alt="Logo Quai Antique blanc" class="h-full"></a>
-                <button><img src={{ asset('build/images/svg/'~ "hamburger-open.svg") }} alt="Open menu"></button>
+                <a href="{{ path('home') }}" class=""><img src={{ asset('images/svg/'~ "logo-white.svg")}} alt="Logo Quai Antique blanc" class="h-full"></a>
+                <button><img src={{ asset('images/svg/'~ "hamburger-open.svg") }} alt="Open menu"></button>
                 <nav class="hidden"> 
                     <ul>
                         <li><a href="{{ path('home') }}">Accueil</a></li>
