--- a/templates/Home/home.html.twig
+++ b/templates/Home/home.html.twig
@@ -8,7 +8,7 @@
         <div class="min-h-screen h-full">
             <div class="image absolute filter blur-sm h-full w-full -z-10">
             </div>
-            <div class="relative flex flex-col justify-center items-center text-secondary bg-transparent h-full px-4">
+            <div class="relative flex flex-col justify-center items-center text-secondary bg-transparent min-h-screen px-4">
                 <h1 class="font-secondary text-3.5xl flex flex-col items-center">Bienvenue au <span class="font-primary text-4xl pt-2">Quai Antique</span></h1>
                 <div class="font-secondary pt-8">
                     <p class="text-2.5xl">Un restaurant</p>
@@ -25,7 +25,7 @@
                     </ul>
                 </div>
             </div>
-        <div class="min-h-screen h-full text-secondary p-4 font-secondary">
+        <div class=" h-full text-secondary p-4 font-secondary">
             <h2 class="text-2.25xl text-center">La Savoie dans votre assiette !</h2>
             <div class="carousel font-primary flex flex-col">
                 <div class="carousel_pic grid h-[214px] gap-4 relative overflow-x-hidden my-4">
